add 'Image Reconstruction from Feature Maps' project

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Projects"
+title: "Selected Course Projects"
 permalink: /projects/
 author_profile: true
 collection: projects
